@@ -2,24 +2,24 @@ A lot of work to do for cgdb-0.4.0
 
 1. Add a dejagnu testsuite to the annotate_driver and gdbmi_driver
 
-3. Create a better interface to the front ends
+2. Create a better interface to the front ends
 
-4. Integrate gdbmi into libtgdb
-
-5. Make driver use both annotate and gdbmi
-
-6. Rework tgdb to be able to support multiple types of debugging (annotate,mi)
+3. Rework tgdb to be able to support multiple types of debugging (annotate,mi)
    This involves making a better interface to running commands through the
    debbuger and through readline.
 
+    4. Integrate gdbmi into libtgdb
+
+    5. Make driver use both annotate and gdbmi
+
 Finished:
 
-2. Get configure to only build cgdb, and build the driver programs on request.
+Get configure to only build cgdb, and build the driver programs on request.
 
-7. Reorganize tgdb to have a separate low level lib for ADT's and for
-   util calls like xmalloc. This is so all programs can use it without
-   linking to libtgdb.
+Reorganize tgdb to have a separate low level lib for ADT's and for
+util calls like xmalloc. This is so all programs can use it without
+linking to libtgdb.
 
-8. Move rlctx_prog to another directory
+Move rlctx_prog to another directory
 
-9. Figure out how to make rlctx not require another program to use.
+Figure out how to make rlctx not require another program to use.
